--- a/views/store.html
+++ b/views/store.html
@@ -113,9 +113,13 @@
 
         <!-- Skull SocialMedia -->
 
+
         <section class="skullSocialMedia">
             <article class="socialMedia">
-                <img src="../img/skull.svg" alt="" class="skullIcon">
+                <input type="checkbox" id="socialSkull">
+                <label for="socialSkull" class="label">
+                    <img src="../img/skull.svg" alt="" class="skullIcon">
+                </label>
                 <ul>
                     <li><a href="https://www.instagram.com/" target="_blank" class="item"><img src="../img/instagram.svg" alt="" class="itemSocial"></a></li>
                     <li><a href="https://www.youtube.com/" target="_blank" class="item"><img src="../img/youtube.svg" alt="" class="itemSocial"></a></li>
@@ -178,7 +182,6 @@
                 <label for="filterSide" class="headLine">
                     <div class="filter">
                         <img class="filterIcon" src="../img/filter_Icon.svg" alt="Filter icon">
-
                         <p class="filterWord">Filter <span class="clipPath"></span></p>
                     </div>
                 </label>
@@ -193,7 +196,6 @@
                         <div class="sectionAvailability">
                             <h3 class="titleAvailability">Availability</h3>
                             <article class="availability">
-
                                     <label for="inStock" class="labelOne">
                                         <input type="checkbox" id="inStock">In-stock
                                     </label>
@@ -755,7 +757,7 @@
             <img class="raccoon" src="../img/logo_Raccoon.svg" alt="Raccoon brand">
             <div class="developer">
                 <p>Developed and made with 💖 by Diego Marin </p>
-                <p> | © 2023 | <span class="raccoon"> Raccoon </span>. All rights reserved |</p>
+                <p> | © 2023 | <span class="raccoonBrand"> Raccoon </span>. All rights reserved |</p>
                 <i class="em em-flag-co" aria-role="presentation" aria-label="Colombia Flag"></i>
                 <i class="em em-flag-ca" aria-role="presentation" aria-label="Canada Flag"></i>
             </div>
