--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
   align-items: flex-start;
 }
 
-.flexColumnBetween, .skullSocialMedia .socialMedia ul, .skullSocialMedia, .sectionFilter .menuFilterSide .menuFilter .choiceFilter, .sectionFilter .menuFilterSide .headLine .filter, .sectionPlaceOrder, .sectionShop, .containerStore .skullSocialMedia .socialMedia ul, .containerStore .skullSocialMedia, html .mainContainer .sectionShop {
+.flexColumnBetween, .skullSocialMedia .socialMedia ul, .skullSocialMedia .socialMedia, .sectionFilter .menuFilterSide .menuFilter .choiceFilter, .sectionFilter .menuFilterSide .headLine .filter, .sectionPlaceOrder, .sectionShop, .containerStore .skullSocialMedia .socialMedia ul, .containerStore .skullSocialMedia .socialMedia, html .mainContainer .sectionShop {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -1266,9 +1266,8 @@ html .mainContainer .arrowUp .directionUp .arrowUpIcon:hover {
 }
 .containerStore .skullSocialMedia {
   position: fixed;
-  bottom: 160px;
+  bottom: 30px;
   left: 30px;
-  cursor: pointer;
   z-index: 8;
 }
 .containerStore .skullSocialMedia .socialMedia #socialSkull {
@@ -1277,7 +1276,7 @@ html .mainContainer .arrowUp .directionUp .arrowUpIcon:hover {
 .containerStore .skullSocialMedia .socialMedia #socialSkull:checked ~ ul {
   opacity: 1;
   visibility: visible;
-  transform: translateY(0%);
+  transform: translateY(-100px);
 }
 .containerStore .skullSocialMedia .socialMedia .label .skullIcon {
   width: 45px;
@@ -1289,11 +1288,11 @@ html .mainContainer .arrowUp .directionUp .arrowUpIcon:hover {
 }
 .containerStore .skullSocialMedia .socialMedia ul {
   position: relative;
-  bottom: -90px;
-  left: -26px;
+  bottom: 30px;
+  left: -25px;
   opacity: 0;
   visibility: hidden;
-  transform: translateY(40%);
+  transform: translateY(35%);
   transition: all 0.3s ease-in-out;
 }
 .containerStore .skullSocialMedia .socialMedia ul li {
@@ -3330,9 +3329,8 @@ html .mainContainer .arrowUp .directionUp .arrowUpIcon:hover {
 
 .skullSocialMedia {
   position: fixed;
-  bottom: 160px;
+  bottom: 30px;
   left: 30px;
-  cursor: pointer;
   z-index: 8;
 }
 .skullSocialMedia .socialMedia #socialSkull {
@@ -3341,7 +3339,7 @@ html .mainContainer .arrowUp .directionUp .arrowUpIcon:hover {
 .skullSocialMedia .socialMedia #socialSkull:checked ~ ul {
   opacity: 1;
   visibility: visible;
-  transform: translateY(0%);
+  transform: translateY(-100%);
 }
 .skullSocialMedia .socialMedia .label .skullIcon {
   width: 45px;
@@ -3353,11 +3351,11 @@ html .mainContainer .arrowUp .directionUp .arrowUpIcon:hover {
 }
 .skullSocialMedia .socialMedia ul {
   position: relative;
-  bottom: -90px;
-  left: -26px;
+  bottom: -80px;
+  left: -25px;
   opacity: 0;
   visibility: hidden;
-  transform: translateY(40%);
+  transform: translateY(-15%);
   transition: all 0.3s ease-in-out;
 }
 .skullSocialMedia .socialMedia ul li {
