--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -224,19 +224,18 @@
         }
     }
     .skullSocialMedia{
-        @extend .flexColumnBetween;
         position: fixed;
-        bottom:160px;
+        bottom:30px;
         left:30px;
-        cursor: pointer;
         z-index: 8;
         .socialMedia{
+            @extend .flexColumnBetween;
             #socialSkull{
                 display:none;
                 &:checked ~ ul{
                     opacity:1;
                     visibility:visible;
-                    transform: translateY(0%);
+                    transform: translateY(-100px);
                 }
             }
             .label{
@@ -252,11 +251,11 @@
             ul{
                 @extend .flexColumnBetween;
                 position: relative;
-                bottom:-90px;
-                left:-26px;
+                bottom:30px;
+                left:-25px;
                 opacity:0;
                 visibility:hidden;
-                transform: translateY(40%);
+                transform: translateY(35%);
                 transition:$transition;
                 li{
                     list-style-type: none;
