--- a/views/sign_In_&_Create_Account.html
+++ b/views/sign_In_&_Create_Account.html
@@ -329,6 +329,8 @@
                     <label for="navBarMenu">
                         <p class="ctaFormCreateAccount">Create account</p>
                     </label>
+                    <img src="../img/skull.svg" alt="" class="skullIcon">
+
                 </form>
 
                 <!-- CreateAccount -->
@@ -361,7 +363,10 @@
                     <label  for="navBarMenu">
                         <p class="ctaFormLogIn"> Enter here </p>
                     </label>
+                    <img src="../img/skull.svg" alt="" class="skullIcon">
+
                 </form>
+
             </article>
             <article class="bannerCreateAccount">
                 <img src="../img/background_Sunset.webp" alt="" class="background">
