--- a/scss/_sign_In_&_Create_Account.scss
+++ b/scss/_sign_In_&_Create_Account.scss
@@ -178,6 +178,10 @@
                             }
                         }
                     }
+                    .skullIcon{
+                        width:32px;
+                        margin-top: -20px;
+                    }
                 }
                 .formCreateAccount{
                     legend{
@@ -250,6 +254,10 @@
                                 color: $primaryColor;
                             }
                         }
+                    }
+                    .skullIcon{
+                        width:32px;
+                        margin-top: -20px;
                     }
                 }
             }
