--- a/views/store.html
+++ b/views/store.html
@@ -732,8 +732,16 @@
     <!-- Footer -->
 
     <footer class="footerContainer">
-        <div class="footer">
-            <section class="socialMediaFooter">
+        <section class="footer">
+            <article class="payments">
+                <h3>Payments</h3>
+                <img class="paymentCards" src="../img/payments.webp" alt="Credit cards">
+            </article>
+            <article class="brand">
+                <h3 class="nameLogo">Break a Leg</h3>
+                <img src="../img/skull.svg" alt="Skull logo" class="skull">
+            </article>
+            <article class="socialMediaFooter">
                 <h3 class="contactUs">Contact us..</h3>
                 <ul>
                     <li><a href="https://www.instagram.com/" target="_blank" class="item"><img src="../img/instagram.svg" alt="" class="itemSocial"></a></li>
@@ -742,16 +750,8 @@
                     <li><a href="https://twitter.com/?lang=es" target="_blank" class="item"><img src="../img/twitter.svg" alt="" class="itemSocial"></a></li>
                     <li><a href="https://co.pinterest.com/" target="_blank" class="item"><img src="../img/pinterest.svg" alt="" class="itemSocial"></a></li>
                 </ul>
-            </section>
-            <section class="brand">
-                <h3 class="nameLogo">Break a Leg</h3>
-                <img src="../img/skull.svg" alt="Skull logo" class="skull">
-            </section>
-            <section class="payments">
-                <h3>Payments</h3>
-                <img class="paymentCards" src="../img/payments.webp" alt="Credit cards">
-            </section>
-        </div>
+            </article>
+        </section>
         <section class="development">
             <img class="raccoon" src="../img/logo_Raccoon.svg" alt="Raccoon brand">
             <div class="developer">
