--- a/scss/_show_Room.scss
+++ b/scss/_show_Room.scss
@@ -392,6 +392,11 @@
                 bottom: 30px;
                 left: 30px;
                 z-index: 8;
+                transition: $transition;
+                &:hover{
+                    transform: translateY(0%) scale(105%);
+                    filter:drop-shadow(0 0 6px #696061);
+                }
             }
         }
         ul{
@@ -411,11 +416,10 @@
                         text-decoration: none;
                         margin:5px 0px;
                         filter:  grayscale(0%);
-                        transform: scale(100%, 100%);
                         transition:$transition;
                         &:hover{
-                            transform: scale(110%, 110%);
-                            filter: drop-shadow(0 0 3px rgb(158, 158, 158)) grayscale(100%);
+                            transform: translateY(0%) scale(105%);
+                            filter:drop-shadow(0 0 6px #696061) grayscale(100%);
                         }
                     }
                 }
