--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -214,12 +214,12 @@
             .arrowUpIcon{
                 width:32px;
                 border-radius: 50%;
-                background-color:  $secondaryColor;
-                border: 2px solid $secondaryColor;
+                background-color: $lineColor;
+                border: 2px solid $lineColor;
                 transition: all 0.3s ease;
                 &:hover{
-                    background-color: #BC2327;
-                    border: 2px solid #BC2327;
+                    background-color: $primaryColor;
+                    border: 2px solid $primaryColor;
                 }
             }
         }
@@ -246,6 +246,11 @@
                     bottom: 30px;
                     left: 30px;
                     z-index: 8;
+                    transition: $transition;
+                    &:hover{
+                        transform: translateY(0%) scale(105%);
+                        filter:drop-shadow(0 0 6px #696061) grayscale(100%);
+                    }
                 }
             }
             ul{
@@ -268,8 +273,8 @@
                             transform: scale(100%, 100%);
                             transition:$transition;
                             &:hover{
-                                transform: scale(110%, 110%);
-                                filter: drop-shadow(0 0 3px rgb(158, 158, 158)) grayscale(100%);
+                                transform: translateY(0%) scale(105%);
+                                filter:drop-shadow(0 0 6px #696061) grayscale(100%);
                             }
                         }
                     }
