--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -273,7 +273,7 @@
                             transform: scale(100%, 100%);
                             transition:$transition;
                             &:hover{
-                                transform: translateY(0%) scale(105%);
+                                transform: scale(110%, 110%);
                                 filter:drop-shadow(0 0 6px #696061) grayscale(100%);
                             }
                         }
