--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -7,7 +7,7 @@
 }
 body{
     // background-color: #ffffff;
-    // background-color: #131313;
+    background-color: #131313;
 }
 html{
     .mainContainer{
