--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -42,8 +42,8 @@
                             transform: scale(100%, 100%);
                             transition:$transition;
                             &:hover{
-                                transform: translateY(0%) scale(105%);
-                                filter:drop-shadow(0 0 6px #696061) grayscale(100%);
+                                transform: scale(110%, 110%);
+                                filter:drop-shadow(0 0 10px $blackColor) grayscale(100%);
                             }
                         }
                     }
