--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -6,8 +6,8 @@
     box-sizing: border-box;
 }
 body{
-    // background-color: #ffffff;
-    background-color: #131313;
+    background-color: #ffffff;
+    // background-color: #131313;
 }
 html{
     .mainContainer{
